Lab 2 - second commit

--- a/app/src/main/res/layout/activity_main_relative.xml
+++ b/app/src/main/res/layout/activity_main_relative.xml
@@ -18,8 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_below="@id/TextView"
-            android:layout_weight="1">
+            android:layout_below="@id/TextView">
             <Button
                 android:id="@+id/RelativeButton"
                 android:layout_width="0dp"
@@ -40,8 +39,7 @@
             android:id="@+id/RelativeLinear2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/RelativeLinear"
-            android:layout_weight="1">
+            android:layout_below="@id/RelativeLinear">
             <CheckBox
                 android:id="@+id/RelativeCheckBox"
                 android:layout_width="wrap_content"
