--- a/app/src/main/res/layout/activity_main_grid.xml
+++ b/app/src/main/res/layout/activity_main_grid.xml
@@ -23,7 +23,8 @@
         android:text="@string/Lab2Button"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_columnWeight="0.5"/>
+        android:layout_columnWeight="0.5"
+        />
 
     <ImageButton
         android:layout_width="0dp"
