--- a/app/src/main/res/layout/activity_main_linear.xml
+++ b/app/src/main/res/layout/activity_main_linear.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
             android:layout_weight="1"
@@ -66,7 +66,7 @@
             android:layout_height="match_parent"
             android:text="@string/Lab2CheckBox"
             android:layout_weight="0.5"
-            android:layout_gravity="fill"/>
+            android:gravity="fill"/>
 
         <Switch
             android:layout_width="wrap_content"
