--- a/app/src/main/res/layout/chat_room_layout.xml
+++ b/app/src/main/res/layout/chat_room_layout.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar"
+        android:theme="@style/AppTheme"
+        />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/chatRefresher"
