--- a/app/src/main/res/layout-sw720dp/chat_room_layout.xml
+++ b/app/src/main/res/layout-sw720dp/chat_room_layout.xml
@@ -6,36 +6,43 @@
     android:layout_height="match_parent"
     >
 
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:id="@+id/toolbar"
-        android:theme="@style/AppTheme"
-        />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        >
+
+    </FrameLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/chatRefresher"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toStartOf="@+id/frame_layout"
         android:layout_above="@+id/relative_text_bar"
+        android:background="@drawable/element_border"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/element_border"
         >
 
         <ListView
             android:id="@+id/chatListView"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
+
     <RelativeLayout
         android:id="@+id/relative_text_bar"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/frame_layout"
         android:layout_margin="10dp"
         android:background="@drawable/element_border"
         >
@@ -53,17 +60,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/Lab4_chatEditText"
-            android:layout_toLeftOf="@+id/chatSendButton"
-            android:layout_toRightOf="@+id/chatReceiveButton"
+            android:layout_toStartOf="@+id/chatSendButton"
+            android:layout_toEndOf="@id/chatReceiveButton"
             />
 
         <Button
+            android:text="@string/Lab4_chatReceiveButton"
             android:id="@+id/chatReceiveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:text="@string/Lab4_chatReceiveButton"/>
-
+            />
 
     </RelativeLayout>
 
