--- a/app/src/main/res/layout-sw720dp/chat_room_layout.xml
+++ b/app/src/main/res/layout-sw720dp/chat_room_layout.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:id="@+id/frame_layout"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
